Let 'KActionCollection' handle the loading and saving of shortcut settings instead of doing it ourselves. Additionally, the default shortcut settings for tools are now stored in 'kileui.rc'.

BUG: 187965